# CINN-alpha

./: .gitlab-ci.yml  .travis.yml  CMakeLists.txt  README.md  build.sh
cinn/: CMakeLists.txt  cinn.h  context.cc  context.h  gtest_main.cc  module.cc  module.h  ref_pointer.cc  ref_pointer.h  target.cc  target.h  type.cc  type.h
cinn/api/: CMakeLists.txt  python_api.cc  python_api.h  python_api_test.py
cinn/autotuner/: CMakeLists.txt  autotuner.cc  evaluator.h  point.cc  point.h  point_test.cc
cinn/backends/: CMakeLists.txt  code_gen_c.cc  code_gen_c.h  code_gen_c_test.cc  code_gen_llvm.cc  code_gen_llvm.h  code_gen_llvm_test.cc  cpp_code_gen.cc  cpp_code_gen.h  cpp_code_gen_test.cc  isl_aff_test.cc  isl_test.cc  isl_wrapper.h  llvm_headers.h  llvm_headers_test.cc  llvm_jit.cc  llvm_jit.h  llvm_jit_test.cc  x86_simd.cc  x86_simd.h
cinn/core/: CMakeLists.txt  buffer.cc  buffer.h  buffer_test.cc  cinn_context.cc  cinn_context.h  code_gen.cc  code_gen.h  code_gen_test.cc  computation.cc  computation.h  computation_test.cc  function.cc  function.h  function_test.cc  isl_code_gen.cc  isl_code_gen.h  isl_code_gen_test.cc  schedule_tree.cc  schedule_tree.h  schedule_tree_util.cc  schedule_tree_util.h  stage.cc  stage.h  stage_test.cc
cinn/core/optimize/: CMakeLists.txt  call_once_pass.cc  call_once_pass_test.cc  display_program_pass.cc  fold_reference_indices_pass.cc  fold_variable_utils.cc  fold_variable_utils.h  increment_assign_compose_pass.cc  indices_to_absolute_offset_pass.cc  nested_block_clean_pass.cc  optimizer.cc  optimizer.h  optimizer_test.cc  pass.cc  pass.h  pass_registry.cc  pass_registry.h  simplify_pass.cc  temp_variable_fold_pass.cc  unroll_pass.cc  unroll_utils.cc  unroll_utils.h  use_passes.h  vectorize_pass.cc  vectorize_utils.cc  vectorize_utils.h  vectorize_utils_test.cc
cinn/core/transform/: CMakeLists.txt  schedule_tree_writer.cc  schedule_tree_writer.h  schedule_tree_writer_test.cc  transforms.cc  transforms.h  transforms_test.cc
cinn/execution/: CMakeLists.txt  simd.cc  simd.h  simd_test.cc
cinn/hlir/: CMakeLists.txt  buffer.cc  buffer.h  builder.cc  builder.h  builder_test.cc  graph.cc  graph.h  graph_test.cc  graph_test_util.h  graph_util.cc  graph_util.h  graph_util_test.cc  hlir_util.cc  hlir_util.h  network.cc  network.h  network_test.cc  network_test_util.h  op_registry.cc  op_registry.h  operator.cc  operator.h  placeholder.cc  placeholder.h  program.cc  program.h  session.cc  session.h  tensor.cc  tensor.h  variable.cc  variable.h
cinn/hlir/instruction_layer/: CMakeLists.txt  activation_op.cc  conv2d_op.cc  conv2d_op.h  elementwise_ops.cc  elementwise_ops.h  matmul_op.cc  matmul_op.h  matmul_op_test.cc  pad_op.cc  pad_op.h  pad_op_test.cc  reshape_op.cc  reshape_op.h  transpose_op.cc  transpose_op.h  transpose_op_test.cc  use_ops.h
cinn/hlir/optimize/: CMakeLists.txt  graph_to_ir_functions_pass.cc  hlir_optimize_test.cc  optimizer.cc  optimizer.h  use_passes.h
cinn/ir/: CMakeLists.txt  buffer.cc  buffer.h  expr.cc  expr.h  ir.cc  ir.h  ir_helper.cc  ir_helper.h  ir_helper_test.cc  ir_mutator.cc  ir_mutator.h  ir_mutator_helpers.cc  ir_mutator_helpers.h  ir_printer.cc  ir_printer.h  ir_printer_test.cc  ir_test.cc  ir_visitor.cc  ir_visitor.h  ir_visitor_test.cc  node_base.cc  node_base.h  ops_overload.cc  ops_overload.h
cinn/model_loader/: CMakeLists.txt  host_buffer.cc  host_buffer.h  scope.cc  scope.h  tensor.cc  tensor.h  variable.cc  variable.h
cinn/model_loader/fluid/: CMakeLists.txt  block_desc.cc  block_desc.h  op_desc.cc  op_desc.h  parse_model.cc  parse_model.h  program_desc.cc  program_desc.h  var_desc.cc  var_desc.h
cinn/utils/: CMakeLists.txt  any.cc  any.h  dot.h  isl_utils.cc  isl_utils.h  isl_utils_test.cc  logging.cc  logging.h  macros.h  math.cc  math.h  name_generator.cc  name_generator.h  string.cc  string.h  timer.cc  timer.h  varient.h
cmake/: core.cmake
docs/: conf.py  index.rst
docs/design/: buffer.md  hlir.md  tuner.md
exe_tests/: CMakeLists.txt  README.md  test1.cc  test10.cc  test10_c_launcher.cc  test11.cc  test12.cc  test12_c_launcher.cc  test1_C_launcher.cc  test1_c_launcher.cc  test2.cc  test2_c_launcher.cc  test3.cc  test3_c_launcher.cc  test4.cc  test5.cc  test6_launcher.cc  test6_vectorize.cc  test7_fc_model.cc  test7_launcher.cc  test8_c_launcher.cc  test8_fc_autotune.cc  test9.cc  test9_c_launcher.cc
tools/: ci_build.sh
