cc_library(schedule_tree SRCS schedule_tree.cc DEPS ir)
cc_library(stage SRCS stage.cc DEPS ir ir_printer isl_utils code_gen)
cc_library(buffer SRCS buffer.cc DEPS ir)
cc_library(code_gen SRCS code_gen.cc DEPS ir ir_printer isl_utils)
cc_library(function SRCS function.cc DEPS ir stage code_gen)
cc_test(test_function SRCS function_test.cc DEPS function)

cc_test(test_stage SRCS stage_test.cc DEPS stage)
cc_test(test_code_gen SRCS code_gen_test.cc DEPS code_gen ir_printer stage)
target_link_libraries(test_stage ${isl_lib})
target_link_libraries(test_function ${isl_lib})
